posiGen_FullsendBox/src/objects/InboundEmailConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Inbound email fields</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_10_API__c</fullName>
        <label>Field 10 API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_10_Label__c</fullName>
        <label>Field 10 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_11_API__c</fullName>
        <label>Field 11 API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_11_Label__c</fullName>
        <label>Field 11 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_12_API__c</fullName>
        <label>Field 12 API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_12_Label__c</fullName>
        <label>Field 12 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Field_API__c</fullName>
        <label>Key Field API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Field_Label__c</fullName>
        <label>Key Field Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Default Lead Owner</description>
        <label>Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Inbound Email Settings</label>
</CustomObject>